[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/Kevin.png" type="Texture" id=1]
[ext_resource path="res://redialogscreen.gd" type="Script" id=2]
[ext_resource path="res://assets/Fonts/vcr_osd_mono/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Fonts/Press_Start_2P/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://dialogbox.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 46
outline_size = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -213.0
margin_top = -366.0
margin_right = 213.0
margin_bottom = 366.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogbox" type="ColorRect" parent="."]
visible = false
margin_left = 32.0
margin_top = 504.0
margin_right = 1254.0
margin_bottom = 686.0
color = Color( 0.121569, 0.109804, 0.109804, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="dialogbox"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Kevin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="dialogbox"]
margin_left = 11.8921
margin_top = 70.1632
margin_right = 1069.89
margin_bottom = 106.163
custom_fonts/font = SubResource( 2 )
text = "Hi there... Don't be alarmed. My name is Kevin :)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="dialogbox"]
wait_time = 4.5

[node name="dialog2" type="Timer" parent="dialogbox"]
wait_time = 4.5

[node name="dialog3" type="Timer" parent="dialogbox"]
wait_time = 4.5

[node name="dialog4" type="Timer" parent="dialogbox"]
wait_time = 4.5

[node name="dialog5" type="Timer" parent="dialogbox"]
wait_time = 4.5

[node name="dialog6" type="Timer" parent="dialogbox"]
wait_time = 4.5

[node name="dialog7" type="Timer" parent="dialogbox"]
wait_time = 4.5

[node name="dialog8" type="Timer" parent="dialogbox"]
wait_time = 4.5

[node name="dialog9" type="Timer" parent="dialogbox"]
wait_time = 4.5

[node name="dialog10" type="Timer" parent="dialogbox"]
wait_time = 4.5

[node name="dialog11" type="Timer" parent="dialogbox"]
wait_time = 4.5

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="dialogbox/Timer" to="dialogbox" method="_on_Timer_timeout"]
[connection signal="timeout" from="dialogbox/dialog2" to="dialogbox" method="_on_dialog2_timeout"]
[connection signal="timeout" from="dialogbox/dialog3" to="dialogbox" method="_on_dialog3_timeout"]
[connection signal="timeout" from="dialogbox/dialog4" to="dialogbox" method="_on_dialog4_timeout"]
[connection signal="timeout" from="dialogbox/dialog5" to="dialogbox" method="_on_dialog5_timeout"]
[connection signal="timeout" from="dialogbox/dialog6" to="dialogbox" method="_on_dialog6_timeout"]
[connection signal="timeout" from="dialogbox/dialog7" to="dialogbox" method="_on_dialog7_timeout"]
[connection signal="timeout" from="dialogbox/dialog8" to="dialogbox" method="_on_dialog8_timeout"]
[connection signal="timeout" from="dialogbox/dialog9" to="dialogbox" method="_on_dialog9_timeout"]
[connection signal="timeout" from="dialogbox/dialog10" to="dialogbox" method="_on_dialog10_timeout"]
[connection signal="timeout" from="dialogbox/dialog11" to="dialogbox" method="_on_dialog11_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
